# py-openai-tts

./: README.md
text-to-speech-cli/: .gitignore  README.md  input.txt  pyproject.toml
text-to-speech-cli/src/text_to_speech_cli/: __main__.py  converter.py
text_to_speech_ui_project/: .gitignore  README.md  pyproject.toml  requirements.txt  rxconfig.py
text_to_speech_ui_project/text_to_speech_ui_project/: text_to_speech_ui_project.py
text_to_speech_ui_project/text_to_speech_ui_project/components/: audio_card.py
text_to_speech_ui_project/text_to_speech_ui_project/states/: state.py
